--- a/app/src/main/res/layout/fragment_review_itinerary.xml
+++ b/app/src/main/res/layout/fragment_review_itinerary.xml
@@ -99,6 +99,12 @@
         </androidx.recyclerview.widget.RecyclerView>
 
 
+            <TextView
+                android:id="@+id/errorMsg"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="">
+            </TextView>
 
         <!--    <ImageView-->
         <!--        android:id="@+id/imageView2"-->
