tried to extend stop adapter.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,6 +43,9 @@
 
     <dimen name="search_bar_width">250dp</dimen>
 
+    <!-- display single itin -->
+    <dimen name="single_itin_title_img_height">150dp</dimen>
+
     <!-- profile page -->
     <dimen name="profile_img_size">100dp</dimen>
 
