added recyclerview in displaySingleItin.

--- a/app/src/main/res/layout/card_vert_stop.xml
+++ b/app/src/main/res/layout/card_vert_stop.xml
@@ -1,6 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="190dp"
+    android:layout_height="220dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginBottom="@dimen/cardItinPadding"
+    android:foreground="?attr/selectableItemBackground"
+    app:cardBackgroundColor="@color/colorBg"
+    app:cardCornerRadius="@dimen/roundCorners"
+    app:cardElevation="6dp"
+    app:cardPreventCornerOverlap="false">
 
-</LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:id="@+id/stopName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/cardTextPadding"
+            android:fontFamily="@font/manjaribold"
+            android:text="Stop Name"
+            android:textColor="@color/colorGreyStroke"
+            android:textSize="@dimen/card_text" />
+
+        <TextView
+            android:id="@+id/address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/stopName"
+            android:layout_marginLeft="@dimen/cardTextPadding"
+            android:fontFamily="@font/manjariregular"
+            android:text="Address"
+            android:textColor="@color/colorGreyStroke"
+            android:textSize="@dimen/card_text" />
+
+
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/address"
+            android:layout_marginLeft="@dimen/cardTextPadding"
+            android:fontFamily="@font/manjariregular"
+            android:text="Description"
+            android:textColor="@color/colorGreyStroke"
+            android:textSize="@dimen/card_text" />
+
+
+    </RelativeLayout>
+</androidx.cardview.widget.CardView>
