--- a/app/src/main/res/layout/fragment_display_itin.xml
+++ b/app/src/main/res/layout/fragment_display_itin.xml
@@ -79,6 +79,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/primary" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/stops"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </LinearLayout>
 
 </LinearLayout>
