converted filter to linear

--- a/app/src/main/res/drawable/rounded_corner_price.xml
+++ b/app/src/main/res/drawable/rounded_corner_price.xml
@@ -12,5 +12,8 @@
         android:bottom="10dp"
         android:top="10dp" />
 
+    <size
+        android:width="70dp" />
+
     <corners android:radius="6dp" />
 </shape>
