create inside drawer leads to create overview fragment, which leads to create fragment. flow of inputting itin name, location, then adding stops and moving to prev/next stops and reviewing seems to be working

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -16,12 +16,27 @@
         tools:layout="@layout/fragment_profile" />
 
     <fragment
-        android:id="@+id/nav_create"
+        android:id="@+id/fragment_addStop"
         android:name="cs160.final_proj_drawer.ui.create.CreateFragment"
         tools:layout="@layout/fragment_create">
         <action
-            android:id="@+id/action_nav_create_to_review"
+            android:id="@+id/action_addStop_to_review"
             app:destination="@id/fragment_review" />
+        <argument
+            android:name="itineraryName"
+            app:argType="string" />
+        <argument
+            android:name="itineraryLocation"
+            app:argType="string" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_create"
+        android:name="cs160.final_proj_drawer.ui.create.CreateOverviewFragment"
+        tools:layout="@layout/fragment_create_overview" >
+        <action
+            android:id="@+id/action_nav_create_to_addStop"
+            app:destination="@id/fragment_addStop" />
     </fragment>
 
     <fragment
