--- a/app/src/main/res/drawable/rounded_corner_price_filled.xml
+++ b/app/src/main/res/drawable/rounded_corner_price_filled.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <stroke
         android:width="1dp"
-        android:color="@color/colorDarkGrey" />
+        android:color="@color/colorBlueBright" />
 
-    <solid android:color="@color/colorOffWhite" />
+    <solid android:color="@color/colorBlueBright" />
 
     <padding
         android:left="10dp"
