--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -52,4 +52,7 @@
     <!--settings page -->
     <dimen name="marginSettingsColorSwatches">10dp</dimen>
 
+
+    <!-- centering text inside submit button -->
+    <dimen name="textPadding"> 16dp </dimen>
 </resources>
