--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,7 +13,7 @@
             android:icon="@drawable/ic_menu_profile"
             android:title="@string/menu_profile" />
         <item
-            android:id="@+id/nav_create"
+            android:id="@+id/nav_create_overview"
             android:icon="@drawable/ic_menu_create"
             android:title="@string/menu_create" />
         <item
