new icons on card_stop

--- a/app/src/main/res/layout/card_stop.xml
+++ b/app/src/main/res/layout/card_stop.xml
@@ -14,7 +14,34 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/deleteIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_delete" />
+
+        <ImageView
+            android:id="@+id/editIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@id/deleteIcon"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_pencil" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
 
@@ -22,8 +49,10 @@
             android:id="@+id/stopName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="false"
             android:layout_marginLeft="@dimen/cardTextPadding"
-            android:fontFamily="@font/manjaribold"
+            android:layout_marginTop="@dimen/cardTextPadding"
+            android:fontFamily="@font/manjariregular"
             android:text="Stop Name"
             android:textColor="@color/colorGreyStroke"
             android:textSize="@dimen/card_text" />
