--- a/app/src/main/res/layout/fragment_create_overview.xml
+++ b/app/src/main/res/layout/fragment_create_overview.xml
@@ -19,9 +19,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="45dp"
-            android:fontFamily="@font/manjaribold"
+            android:fontFamily="@font/manjariregular"
             android:text="Name"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textColor="@color/colorGreyStroke"/>
 
         <EditText
             android:id="@+id/name"
@@ -44,7 +45,9 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="110dp"
             android:fontFamily="@font/manjariregular"
-            android:textSize="20sp" />
+            android:text="Location"
+            android:textSize="20sp"
+            android:textColor="@color/colorGreyStroke"/>
 
         <EditText
             android:id="@+id/location"
@@ -69,7 +72,10 @@
         android:layout_gravity="right"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="50dp"
-        android:text="Add Stops" />
+        android:text="Add Stops"
+        android:background="@drawable/rounded_corner_button"
+        android:textColor="@color/colorButtonText"
+        android:textAllCaps="false"/>
 
     <TextView
         android:id="@+id/errorMsg"
