--- a/app/src/main/res/layout/fragment_review_itinerary.xml
+++ b/app/src/main/res/layout/fragment_review_itinerary.xml
@@ -104,7 +104,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fontFamily="@font/manjaribold"
-            android:text="No stops found"
+            android:text=""
             android:textAlignment="center"
             android:textSize="@dimen/card_text"
             android:textColor="@color/colorErrorMessage"></TextView>
