finished size of cards on displaySingleItin

--- a/app/src/main/res/layout/card_vert_stop.xml
+++ b/app/src/main/res/layout/card_vert_stop.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="190dp"
-    android:layout_height="220dp"
-    android:layout_marginRight="10dp"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/vert_stop_height"
     android:layout_marginBottom="@dimen/cardItinPadding"
     android:foreground="?attr/selectableItemBackground"
-    app:cardBackgroundColor="@color/colorBg"
+    app:cardBackgroundColor="@color/colorErrorMessage"
     app:cardCornerRadius="@dimen/roundCorners"
-    app:cardElevation="6dp"
     app:cardPreventCornerOverlap="false">
 
 
@@ -23,9 +21,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/cardTextPadding"
-            android:fontFamily="@font/manjaribold"
+            android:fontFamily="@font/primary"
             android:text="Stop Name"
-            android:textColor="@color/colorGreyStroke"
+            android:textColor="@color/colorNormalText"
             android:textSize="@dimen/card_text" />
 
         <TextView
@@ -34,9 +32,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/stopName"
             android:layout_marginLeft="@dimen/cardTextPadding"
-            android:fontFamily="@font/manjariregular"
+            android:fontFamily="@font/primary"
             android:text="Address"
-            android:textColor="@color/colorGreyStroke"
+            android:textColor="@color/colorNormalText"
             android:textSize="@dimen/card_text" />
 
 
@@ -46,9 +44,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/address"
             android:layout_marginLeft="@dimen/cardTextPadding"
-            android:fontFamily="@font/manjariregular"
+            android:fontFamily="@font/primary"
             android:text="Description"
-            android:textColor="@color/colorGreyStroke"
+            android:textColor="@color/colorNormalText"
             android:textSize="@dimen/card_text" />
 
 
