--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
 
     <color name="colorBg">@color/colorOffWhite</color>
 
+
+    <color name="colorNormalText">@color/colorGreyStroke</color>
     <color name="colorTitle">@color/colorBlue</color>
     <color name="colorFunText">@color/colorGreenLight</color>
     <color name="colorButton">@color/colorBlueBright</color>
