--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,6 +24,11 @@
             app:argType="cs160.final_proj_drawer.logic.ItineraryObject"
             app:nullable="true"
             android:defaultValue="@null" />
+        <argument
+            android:name="stopIndex"
+            app:argType="integer"
+            android:defaultValue="0" />
+
     </fragment>
 
     <fragment
