--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,6 +22,7 @@
             android:background="@drawable/search_button"
             android:src="@drawable/ic_search"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tagSearchBar"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
@@ -40,7 +41,11 @@
             android:id="@+id/tagSearchBar"
             android:layout_width="@dimen/search_bar_width"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/searchview_rounded"
             android:queryHint="@string/home_search_hint_tag"
+            android:searchIcon="@null"
+            android:iconifiedByDefault="false"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,9 +53,13 @@
             android:id="@+id/locationSearchBar"
             android:layout_width="@dimen/search_bar_width"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/searchview_rounded"
             android:hint="@string/home_search_hint_loc"
             android:queryHint="Current Location"
             android:visibility="invisible"
+            android:searchIcon="@null"
+            android:iconifiedByDefault="false"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tagSearchBar" />
 
