--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- general colors -->
-    <color name="colorPrimary">@color/colorGreen</color>
+    <color name="colorPrimary">@color/colorBlueDark</color>
     <color name="colorPrimaryDark">@color/colorGreenDark</color>
     <color name="colorAccent">@color/colorTealLight</color>
     <color name="colorAccentDark">@color/colorTeal</color>
@@ -11,8 +11,9 @@
 
     <color name="colorNormalText">@color/colorGreyStroke</color>
     <color name="colorTitle">@color/colorBlue</color>
-    <color name="colorFunText">@color/colorGreenLight</color>
+    <color name="colorFunText">@color/colorBlue</color>
     <color name="colorButton">@color/colorBlueBright</color>
+    <color name="colorBlueMedium">#3B88CC</color>
 
 
     <!-- these colors are for the gradient in the nav drawer -->
@@ -41,7 +42,7 @@
 
     <color name= "colorGreenLight">#007973</color>
     <color name= "colorGreen">#004E53</color>
-    <color name= "colorGreenDark">#093E42</color>
+    <color name= "colorGreenDark">#0A1553</color>
 
     <color name="colorTealLight">#00B8C4</color>
     <color name="colorTeal">#018C9B</color>
