--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,13 +29,14 @@
             android:id="@+id/filterButton"
             android:layout_width="@dimen/search_button_width"
             android:layout_height="@dimen/search_button_height"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginTop="@dimen/defaultPadding"
             android:background="@drawable/search_button"
             android:text="@string/filter_button"
             android:textColor="@color/colorOffWhite"
+            android:textAllCaps="false"
             android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/searchButton" />
+            app:layout_constraintEnd_toEndOf="@+id/searchButton"
+            app:layout_constraintTop_toBottomOf="@+id/searchButton" />
 
         <SearchView
             android:id="@+id/tagSearchBar"
