--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,105 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".LoginActivity">
+
+
+    <!-- put a drawable here with our icon :) -->
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/largePadding"
+        android:fontFamily="@font/primary"
+        android:text="Travelr"
+        android:textAlignment="center"
+        android:textSize="@dimen/titleTextSize"
+        android:textColor="@color/colorTitle"
+        android:layout_gravity="center"/>
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="250dp"
+        android:layout_width="@dimen/login_boxes_width"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/login_email_hint"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:layout_gravity="center"/>
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="250dp"
+        android:layout_width="@dimen/login_boxes_width"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:hint="Password"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email" />
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:hint="@string/login_password_hint"
+        android:inputType="textPassword"
+        android:layout_gravity="center"/>
 
-    <Button
-        android:id="@+id/fb"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="@dimen/login_boxes_width"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="192dp"
-        android:onClick="createTestItinerary"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/activity_vertical_margin">
+
+        <ImageButton
+            android:id="@+id/fb"
+            android:layout_width="@android:dimen/app_icon_size"
+            android:layout_height="@android:dimen/app_icon_size"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            app:layout_constraintBottom_toBottomOf="@+id/google"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/google"
+            app:srcCompat="@drawable/facebook" />
+
+        <ImageButton
+            android:id="@+id/google"
+            android:layout_width="@android:dimen/app_icon_size"
+            android:layout_height="@android:dimen/app_icon_size"
+            android:background="@drawable/searchview_rounded"
+            android:onClick="createTestItinerary"
+            android:paddingLeft="5dp"
+            android:paddingTop="5dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="5dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/google"
+            app:layout_constraintBottom_toBottomOf="@+id/guest"
+            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guest" />
+
+        <Button
+            android:id="@+id/guest"
+            android:layout_width="@android:dimen/app_icon_size"
+            android:layout_height="@android:dimen/app_icon_size"
+            android:onClick="createTestItinerary"
+            android:textAllCaps="false"
+            android:text="@string/login_guest_button_text"
+            android:textSize="14dp"
+            android:textColor="@color/colorGreyStroke"
+            android:background="@drawable/searchview_rounded"
+            app:layout_constraintBottom_toBottomOf="@+id/google"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/google" />
 
 
-    <Button
-        android:id="@+id/google"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="160dp"
-        android:onClick="createTestItinerary"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/fb"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Button
-        android:id="@+id/guest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="30dp"
-        android:onClick="createTestItinerary"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/google"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <Button
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="100dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/login_big_button_margin"
         android:background="@drawable/search_button"
-        android:fontFamily="@font/manjaribold"
-        android:gravity="center"
+        android:fontFamily="@font/primary"
         android:onClick="login"
         android:paddingTop="5dp"
+        android:text="@string/login_button_text"
+        android:textAlignment="center"
         android:textAllCaps="false"
-        android:text="Login"
-        android:textAlignment="center"
-        android:textColor="@color/colorOffWhite"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        android:textColor="@color/colorBg"
+        android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:fontFamily="@font/manjaribold"
-        android:text="Travelr"
-        android:textAlignment="center"
-        android:textSize="48sp"
-        android:textColor="#194FA2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
