added structure to filter fragment for distance and price, need to plug in firebase functions now

--- a/app/src/main/res/navigation/home_child_navigation.xml
+++ b/app/src/main/res/navigation/home_child_navigation.xml
@@ -12,7 +12,16 @@
     <fragment
         android:id="@+id/fragment_filter"
         android:name="cs160.final_proj_drawer.ui.home.FilterFragment"
-        tools:layout="@layout/fragment_filter" />
+        tools:layout="@layout/fragment_filter" >
+        <argument
+            android:name="location"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="initialTagQuery"
+            app:argType="string"
+            app:nullable="true" />
+    </fragment>
     <fragment
         android:id="@+id/fragment_splash"
         android:name="cs160.final_proj_drawer.ui.home.SplashFragment"
