--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -87,7 +87,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/price1"
+                android:id="@+id/price_free"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -100,11 +100,11 @@
                 android:textSize="15sp" />
 
             <TextView
-                android:id="@+id/price2"
+                android:id="@+id/price_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_toEndOf="@+id/price1"
+                android:layout_toEndOf="@+id/price_free"
                 android:background="@drawable/rounded_corner_price"
                 android:fontFamily="@font/manjaribold"
                 android:text="$"
@@ -113,11 +113,11 @@
                 android:textSize="15sp" />
 
             <TextView
-                android:id="@+id/price3"
+                android:id="@+id/price_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_toEndOf="@+id/price2"
+                android:layout_toEndOf="@+id/price_1"
                 android:background="@drawable/rounded_corner_price"
                 android:fontFamily="@font/manjaribold"
                 android:text="$$"
@@ -126,11 +126,11 @@
                 android:textSize="15sp" />
 
             <TextView
-                android:id="@+id/price4"
+                android:id="@+id/price_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_toEndOf="@+id/price3"
+                android:layout_toEndOf="@+id/price_2"
                 android:background="@drawable/rounded_corner_price"
                 android:fontFamily="@font/manjaribold"
                 android:text="$$$"
@@ -150,7 +150,7 @@
             android:textColor="@color/colorBlueHeader"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/price1" />
+            app:layout_constraintTop_toBottomOf="@+id/price_free" />
 
         <RelativeLayout
             android:layout_width="match_parent"
