--- a/app/src/main/res/layout/fragment_review_itinerary.xml
+++ b/app/src/main/res/layout/fragment_review_itinerary.xml
@@ -109,11 +109,169 @@
             android:textSize="@dimen/card_text"
             android:textColor="@color/colorErrorMessage"></TextView>
 
+
+<!--        <RelativeLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content">-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/priceText"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_alignTop="@+id/priceGroup"-->
+<!--                android:layout_alignBottom="@+id/priceGroup"-->
+<!--                android:layout_alignParentStart="true"-->
+<!--                android:layout_marginStart="30dp"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                android:fontFamily="@font/primary"-->
+<!--                android:gravity="center_vertical"-->
+<!--                android:text="Price"-->
+<!--                android:textAlignment="center"-->
+<!--                android:textColor="@color/colorGreyStroke"-->
+<!--                android:textSize="20sp"></TextView>-->
+
+<!--            <RadioGroup-->
+<!--                android:id="@+id/priceGroup"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_alignParentEnd="true"-->
+<!--                android:layout_marginEnd="20dp"-->
+<!--                android:orientation="horizontal">-->
+
+<!--                <RadioButton-->
+<!--                    android:id="@+id/free"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginEnd="24dp"-->
+<!--                    android:layout_weight="1"-->
+
+<!--                    android:buttonTint="@color/colorBlueBright"-->
+<!--                    android:text="free" />-->
+
+<!--                <RadioButton-->
+<!--                    android:id="@+id/price_1"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginEnd="24dp"-->
+<!--                    android:layout_weight="1"-->
+
+<!--                    android:buttonTint="@color/colorBlueBright"-->
+<!--                    android:text="$" />-->
+
+<!--                <RadioButton-->
+<!--                    android:id="@+id/price_2"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginEnd="24dp"-->
+<!--                    android:layout_weight="1"-->
+
+<!--                    android:buttonTint="@color/colorBlueBright"-->
+<!--                    android:text="$$" />-->
+
+<!--                <RadioButton-->
+<!--                    android:id="@+id/price_3"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginEnd="24dp"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:buttonTint="@color/colorBlueBright"-->
+<!--                    android:text="$$$" />-->
+
+<!--            </RadioGroup>-->
+<!--        </RelativeLayout>-->
+
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="horizontal">
+
+            <SeekBar
+                android:id="@+id/seekBar"
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:max="3"
+                android:progressDrawable="@drawable/seek_bar"
+                android:thumb="@drawable/seek_thumb"
+                android:tickMark="@drawable/tickmark" />
+        </RelativeLayout>
+
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:stretchColumns="*"
+            android:layout_above="@+id/sb_task_detail_status"
+            android:layout_alignStart="@+id/sb_task_detail_status">
+
+            <TableRow
+                android:id="@+id/statusRow"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/free"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_column="0"
+                    android:layout_weight="1"
+                    android:paddingStart="32dp"
+                    android:text="Free"
+                    android:fontFamily="@font/primary_thin"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/colorGreyStroke"
+                    android:textSize="14dp" />
+
+                <TextView
+                    android:id="@+id/price_1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:layout_weight="1"
+                    android:paddingRight="3dp"
+                    android:text="$"
+                    android:fontFamily="@font/primary_thin"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorGreyStroke"
+                    android:textSize="14dp" />
+
+                <TextView
+                    android:id="@+id/price_2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_column="2"
+                    android:layout_weight="1"
+                    android:paddingStart="4dp"
+                    android:text="$$"
+                    android:fontFamily="@font/primary_thin"
+                    android:textAlignment="center"
+                    android:textAllCaps="true"
+                    android:textColor="@color/colorGreyStroke"
+                    android:textSize="14dp" />
+
+                <TextView
+                    android:id="@+id/price_3"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_column="3"
+                    android:layout_weight="1"
+                    android:paddingEnd="35dp"
+                    android:text="$$$"
+                    android:fontFamily="@font/primary_thin"
+                    android:textAlignment="textEnd"
+                    android:textColor="@color/colorGreyStroke"
+                    android:textSize="14dp" />
+
+            </TableRow>
+
+        </TableLayout>
         <Button
             android:id="@+id/submit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="50dp"
             android:background="@drawable/rounded_corner_button"
             android:fontFamily="@font/primary"
