--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -67,4 +67,6 @@
     <dimen name="stopWidth"> 190dp </dimen>
     <dimen name="dropShadowElevation"> 6dp </dimen>
 
+    <dimen name="seekbar_thumb_width">25dp</dimen>
+
 </resources>
